# VNDRLY.ai

./: .easignore  .env.example  .gitattributes  .gitignore  .npmrc  .replit  AGENTS.md  README.md  Start-VNDRLY-Dev.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  replit.nix  threat_model.md  tsconfig.json
.cursor/: ecc-install-state.json
artifacts/majik-desktop/src-tauri/: Cargo.toml  tauri.conf.json
artifacts/majik-desktop/src-tauri/capabilities/: default.json
artifacts/majik-desktop/src-tauri/icons/: icon.icns
artifacts/majik-desktop/src-tauri/src/: lib.rs  main.rs
docs/: 2026-05-01-1099-misc-attorney-mask-incident.md  accounting-oauth.md  agent-doctrines.md  api-error-codes.md  assistant-language-eval.md  assistant-review.md  assistant-tone-eval.md  assistant-tool-use-eval.md  canonical-credentials.md  database.md  demo-readiness-2026-04-22.md  deploy-godaddy.md  foreman-portal-spec.md  foreman-portal-workflows.md  machine-transfer-pack.md  majik.md  production-handoff.md  production-smoke-test-report-2026-06-20.md  qbo-1099-suffix-sandbox-verification.md  safety-incident-reporting-prd.md  ui-presets.md
scripts/: README.md  check-live.mjs  check-login-api.mjs  check-vps-api.mjs  check-vps-comment-logs.mjs  check-vps-deploy.mjs  check-vps-field-ticket-logs.mjs  check-vps-location-logs.mjs  convert-hotlist-png-buttons.mjs  create-machine-transfer-pack.ps1  deploy.mjs  dev-bootstrap.sh  eas-mobile-common.ps1  ensure-local-dev.ps1  expo-api-proxy.mjs  fix-dashboard-dialog-button.mjs  fix-dashboard-imports.mjs  fix-hotlist-png-buttons.mjs  (+52 more)
(+1371 files in other folders)
