[package]
name = "majik-desktop"
version = "0.1.0"
description = "Majik wake-presence desktop widget for VNDRLY"
authors = ["VNDRLY"]
edition = "2021"

[lib]
name = "majik_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
